--- a/src/main.html
+++ b/src/main.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+  <div class="root">
+    <div class="search root__section">
+      <div class="header">
+        
+      </div>
+    </div>
+  </div>
 
 </body>
 
