Added a search section to the markup

--- a/src/main.html
+++ b/src/main.html
@@ -14,8 +14,18 @@
   <div class="root">
     <div class="search root__section">
       <div class="header">
-        
+        <p class="header__text">NewsAnalyzer</p>
+        <div class="header__links">
+          <a href="" class="header__link header__link_current">Главная</a>
+          <a href="" class="header__link">О проекте</a>
+        </div>
       </div>
+      <h1 class="content-title">Что в мире творится?</h1>
+      <p class="search__text">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за прошедшую неделю.</p>
+      <form class="search__form" name="" novalidate>
+        <input type="text" class="search__input" placeholder="Введите тему новости">
+        <button type="submit" class="search__button">Искать</button>
+      </form>
     </div>
   </div>
 
