--- a/src/main.html
+++ b/src/main.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="root">
-    <div class="search root__section">
+    <div class="search">
       <div class="header">
         <p class="content-title content-title_header">NewsAnalyzer</p>
         <div class="header__page-links">
@@ -22,11 +22,38 @@
         </div>
       </div>
       <h1 class="content-title content-title_search">Что в мире творится?</h1>
-      <p class="search__text">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за прошедшую неделю.</p>
+      <p class="search__text">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
+        прошедшую неделю.</p>
       <form class="search__form" name="" novalidate>
         <input type="text" class="search__input" placeholder="Введите тему новости">
         <button type="submit" class="search__button">Искать</button>
       </form>
+    </div>
+    <div class="results">
+      <div class="results__content">
+        <div class="results__header">
+          <h2 class="content-title content-title_results">Результаты поиска</h2>
+          <a href="" class="results__page-link">Посмотреть аналитику &gt;</a>
+        </div>
+        <div class="results__news-cards">
+          <div class="card">
+            <div class="card__image"></div>
+            <p class="card__date">2 августа, 2019</p>
+            <h3 class="content-title content-title_card">Национальное достояние - парки</h3>
+            <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться
+              система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
+            <p class="card__source">ЛЕНТА.РУ</p>
+          </div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+      </div>
+      <div class="results__empty">
+        <img src="./images/not-found.svg" alt="Sad smile">
+        <h2 class="content-title content-title_empty">Ничего не найдено</h2>
+        <p class="results__text">К сожалению по вашему запросу ничего не найдено</p>
+      </div>
+
     </div>
   </div>
 
