--- a/src/main.html
+++ b/src/main.html
@@ -30,6 +30,10 @@
       </form>
     </div>
     <div class="results">
+      <div class="results__load">
+        <div class="results__loader"></div>
+        <p class="results__text">Идёт поиск новостей...</p>
+      </div>
       <div class="results__content">
         <div class="results__header">
           <h2 class="content-title content-title_results">Результаты поиска</h2>
