--- a/src/main.html
+++ b/src/main.html
@@ -16,11 +16,12 @@
     <div class="search">
       <div class="header">
         <p class="content-title content-title_header">NewsAnalyzer</p>
-        <div class="header__page-links">
-          <a href="" class="header__page header__page_current">Главная</a>
-          <a href="" class="header__page">О проекте</a>
-        </div>
+        <nav class="header__page-links">
+          <a href="./main.html" class="header__page header__page_theme_light header__page_current">Главная</a>
+          <a href="" class="header__page header__page_theme_light">О проекте</a>
+        </nav>
       </div>
+      <div class="rectangle"></div>
       <h1 class="content-title content-title_search">Что в мире творится?</h1>
       <p class="content-subtitle content-subtitle_search">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
         прошедшую неделю.</p>
@@ -31,13 +32,13 @@
     </div>
     <div class="results">
       <div class="results__load">
-        <div class="results__loader"></div>
+        <div class="loader"></div>
         <p class="content-subtitle content-subtitle_results">Идёт поиск новостей...</p>
       </div>
       <div class="results__content">
         <div class="results__header">
           <h2 class="content-title content-title_results">Результаты поиска</h2>
-          <a href="" class="results__page-link">Посмотреть аналитику &gt;</a>
+          <a href="./paper.html" class="results__page-link">Посмотреть аналитику &gt;</a>
         </div>
         <div class="results__news-cards">
           <div class="card">
