Edited paper page

--- a/src/paper.html
+++ b/src/paper.html
@@ -17,13 +17,15 @@
             <div class="header">
                 <p class="content-title content-title_header">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./main.html" class="header__page header__page_theme_dark header__page_current">Главная</a>
+                    <a href="./main.html" class="header__page header__page_theme_dark">Главная</a>
                     <a href="" class="header__page header__page_theme_dark">О проекте</a>
                 </nav>
             </div>
             <div class="rectangle"></div>
             <div class="summary__content">
-                <p class="summary__navigation-path"><b>Главная</b> / Аналитика</p>
+                <p class="summary__path">
+                    <a href="./main.html" class="summary__main-page-link">Главная</a> <span class="summary__current-page">/ Аналитика</span>
+                </p>
                 <h1 class="content-title content-title_info">Вы спросили: &laquo;<span
                         class="summary__request-name">Путешествия</span>&raquo;</h1>
                 <p class="summary__content-text">Новостей за неделю: <span class="summary__number-of-news">34 324</span>
@@ -36,10 +38,10 @@
             <h2 class="content-title content-title_details">Аналитика по дням</h2>
             <div class="diagram">
                 <div class="diagram__columns">
-                    <p class="diagram__date_month">ДАТА</p>
-                    <p>КОЛ-ВО УПОМИНАНИЙ</p>
+                    <p class="diagram__column-name">ДАТА</p>
+                    <p class="diagram__column-name">КОЛ-ВО УПОМИНАНИЙ</p>
                 </div>
-                <div class="diagram__line"></div>
+                <p class="diagram__month">(АВГУСТ)</p>
                 <div class="diagram__scale">
                     <p>0</p>
                     <p>25</p>
@@ -47,38 +49,60 @@
                     <p>75</p>
                     <p>100</p>
                 </div>
-                <div class="diagram__row">
-                    <p class="diagram__date_day">19, пн</p>
-                    <div class="diagram__bar"></div>
+                <div class="diagram__row diagram__row_first">
+                    <p class="diagram__row-name"><span class="diagram__day diagram__day_mon">19</span>, пн</p>
+                    <p class="diagram__bar diagram__bar_day_mon">9</p>
                 </div>
                 <div class="diagram__row">
-                    <p class="diagram__date">20, вт</p>
-                    <div class="diagram__bar"></div>
+                    <p class="diagram__row-name"><span class="diagram__day diagram__day_tue">20</span>, вт</p>
+                    <p class="diagram__bar diagram__bar_day_tue">9</p>
                 </div>
                 <div class="diagram__row">
-                    <p class="diagram__date">21, ср</p>
-                    <div class="diagram__bar"></div>
+                    <p class="diagram__row-name"><span class="diagram__day diagram__day_wed">21</span>, ср</p>
+                    <p class="diagram__bar diagram__bar_day_wed">9</p>
                 </div>
                 <div class="diagram__row">
-                    <p class="diagram__date">22, чт</p>
-                    <div class="diagram__bar"></div>
+                    <p class="diagram__row-name"><span class="diagram__day diagram__day_thu">22</span>, чт</p>
+                    <p class="diagram__bar diagram__bar_day_thu">9</p>
                 </div>
                 <div class="diagram__row">
-                    <p class="diagram__date">23, пт</p>
-                    <div class="diagram__bar"></div>
+                    <p class="diagram__row-name"><span class="diagram__day diagram__day_fri">23</span>, пт</p>
+                    <p class="diagram__bar diagram__bar_day_fri">9</p>
                 </div>
                 <div class="diagram__row">
-                    <p class="diagram__date">24, сб</p>
-                    <div class="diagram__bar"></div>
+                    <p class="diagram__row-name"><span class="diagram__day diagram__day_sat">24</span>, сб</p>
+                    <p class="diagram__bar diagram__bar_day_sat">9</p>
                 </div>
                 <div class="diagram__row">
-                    <p class="diagram__date">25, вс</p>
-                    <div class="diagram__bar"></div>
+                    <p class="diagram__row-name"><span class="diagram__day diagram__day_sun">25</span>, вс</p>
+                    <p class="diagram__bar diagram__bar_day_sun">9</p>
+                </div>
+                <div class="diagram__scale">
+                    <p>0</p>
+                    <p>25</p>
+                    <p>50</p>
+                    <p>75</p>
+                    <p>100</p>
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <p class="footer__copyright">&copy; 2020 Supersite</p>
+            <menu class="menu">
+                <a href="" class="menu__link">Главная</a>
+                <a href="" class="menu__link">О проекте</a>
+                <a href="" class="menu__link">Яндекс.Практикум</a>
+            </menu>
+            <div class="footer__social">
+                <a href="" class="footer__link">
+                    <img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon">
+                </a>
+                <a href="" class="footer__link">
+                    <img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon">
+                </a>
+            </div>
+        </div>
     </div>
-
 </body>
 
 </html>
