Added About page

--- a/src/main.html
+++ b/src/main.html
@@ -18,7 +18,7 @@
         <p class="content-title content-title_header">NewsAnalyzer</p>
         <nav class="header__page-links">
           <a href="./main.html" class="header__page header__page_theme_light header__page_current">Главная</a>
-          <a href="" class="header__page header__page_theme_light">О проекте</a>
+          <a href="./about.html" class="header__page header__page_theme_light">О проекте</a>
         </nav>
       </div>
       <div class="rectangle"></div>
@@ -35,7 +35,7 @@
         <div class="loader"></div>
         <p class="content-subtitle content-subtitle_results">Идёт поиск новостей...</p>
       </div>
-      <div class="results__content">
+      <div class="results__list">
         <div class="results__header">
           <h2 class="content-title content-title_results">Результаты поиска</h2>
           <a href="./paper.html" class="results__page-link">Посмотреть аналитику &gt;</a>
@@ -91,8 +91,8 @@
     <div class="footer">
       <p class="footer__copyright">&copy; 2020 Supersite</p>
       <menu class="menu">
-        <a href="" class="menu__link">Главная</a>
-        <a href="" class="menu__link">О проекте</a>
+        <a href="./main.html" class="menu__link">Главная</a>
+        <a href="./about.html" class="menu__link">О проекте</a>
         <a href="" class="menu__link">Яндекс.Практикум</a>
       </menu>
       <div class="footer__social">
