--- a/src/paper.html
+++ b/src/paper.html
@@ -18,7 +18,7 @@
                 <p class="content-title content-title_header">NewsAnalyzer</p>
                 <nav class="header__page-links">
                     <a href="./main.html" class="header__page header__page_theme_dark">Главная</a>
-                    <a href="" class="header__page header__page_theme_dark">О проекте</a>
+                    <a href="./about.html" class="header__page header__page_theme_dark">О проекте</a>
                 </nav>
             </div>
             <div class="rectangle"></div>
@@ -89,8 +89,8 @@
         <div class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
             <menu class="menu">
-                <a href="" class="menu__link">Главная</a>
-                <a href="" class="menu__link">О проекте</a>
+                <a href="./main.html" class="menu__link">Главная</a>
+                <a href="./about.html" class="menu__link">О проекте</a>
                 <a href="" class="menu__link">Яндекс.Практикум</a>
             </menu>
             <div class="footer__social">
