Adapted for 768px

--- a/src/about.html
+++ b/src/about.html
@@ -12,15 +12,15 @@
 
 <body>
     <div class="root">
-        <div class="for-customers">
-            <div class="header">
+        <section class="for-customers">
+            <header class="header">
                 <p class="content-title content-title_header">NewsAnalyzer</p>
                 <nav class="header__page-links">
                     <a href="./main.html" class="header__page header__page_theme_dark">Главная</a>
                     <a href="./about.html" class="header__page header__page_theme_dark header__page_current">О
                         проекте</a>
                 </nav>
-            </div>
+            </header>
             <div class="rectangle"></div>
             <h2 class="content-title content-title_for-customers">Клиентам</h2>
             <div class="for-customers__text">
@@ -39,8 +39,8 @@
                 <p class="for-customers__paragraph">Проект был проверен экспертами Яндекс.Практикума. И если вашему
                     бизесу нужен сайт, мы рекомендуем обратиться к этому студенту.</p>
             </div>
-        </div>
-        <div class="technologies">
+        </section>
+        <section class="technologies">
             <div class="technologies__content">
                 <h2 class="content-title content-title_technologies">Используемые технологии</h2>
                 <div class="technologies__list">
@@ -62,21 +62,21 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="author">
-            <div class="author__photo"></div>
+        </section>
+        <section class="author">
+            <img src="" alt="Author photo" class="author__photo">
             <div class="author__about">
                 <h2 class="content-title content-title_author">Об авторе</h2>
                 <p class="author__about-text">Это блок с описаением автора проекта.</p>
             </div>
-        </div>
-        <div class="commits">
-            <div class="commits__header">
+        </section>
+        <section class="commits">
+            <div class="header">
                 <h2 class="content-title content-title_commits">История коммитов из GitHub</h2>
-                <a href="" class="commits__page-link">Открыть в GitHub &gt;</a>
+                <a href="" class="header__link">Открыть в GitHub &gt;</a>
             </div>
-        </div>
-        <div class="footer">
+        </section>
+        <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
             <menu class="menu">
                 <a href="./main.html" class="menu__link">Главная</a>
@@ -91,9 +91,8 @@
                     <img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon">
                 </a>
             </div>
-        </div>
+        </footer>
     </div>
-
 </body>
 
 </html>
