--- a/src/paper.html
+++ b/src/paper.html
@@ -13,14 +13,14 @@
 
 <body>
     <div class="root">
-        <div class="summary">
-            <div class="header">
+        <section class="summary">
+            <header class="header">
                 <p class="content-title content-title_header">NewsAnalyzer</p>
                 <nav class="header__page-links">
                     <a href="./main.html" class="header__page header__page_theme_dark">Главная</a>
                     <a href="./about.html" class="header__page header__page_theme_dark">О проекте</a>
                 </nav>
-            </div>
+            </header>
             <div class="rectangle"></div>
             <div class="summary__content">
                 <p class="summary__path">
@@ -33,8 +33,8 @@
                 <p class="summary__content-text">Упоминаний в заголовках: <span
                         class="summary__number-of-references">235</span></p>
             </div>
-        </div>
-        <div class="details">
+        </section>
+        <section class="details">
             <h2 class="content-title content-title_details">Аналитика по дням</h2>
             <div class="diagram">
                 <div class="diagram__columns">
@@ -85,8 +85,8 @@
                     <p>100</p>
                 </div>
             </div>
-        </div>
-        <div class="footer">
+        </section>
+        <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
             <menu class="menu">
                 <a href="./main.html" class="menu__link">Главная</a>
@@ -101,7 +101,7 @@
                     <img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon">
                 </a>
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 
