--- a/src/main.html
+++ b/src/main.html
@@ -13,32 +13,35 @@
 
 <body>
   <div class="root">
-    <section class="search">
+    <section class="search root__section">
       <header class="header">
-        <p class="content-title content-title_header">NewsAnalyzer</p>
+        <p class="header__logo">NewsAnalyzer</p>
         <nav class="header__page-links">
           <a href="./main.html" class="header__page header__page_theme_light header__page_current">Главная</a>
           <a href="./about.html" class="header__page header__page_theme_light">О проекте</a>
         </nav>
       </header>
       <div class="rectangle"></div>
-      <h1 class="content-title content-title_search">Что в мире творится?</h1>
-      <p class="content-subtitle content-subtitle_search">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
-        прошедшую неделю.</p>
-      <form class="search__form" name="" novalidate>
-        <input type="text" class="search__input" placeholder="Введите тему новости">
-        <button type="submit" class="button button_search">Искать</button>
-      </form>
-    </section>
-    <section class="results">
-      <div class="results__load">
-        <div class="loader"></div>
-        <p class="content-subtitle content-subtitle_results">Идёт поиск новостей...</p>
+      <div class="section-content">
+        <h1 class="content-title content-title_search">Что в мире творится?</h1>
+        <p class="content-subtitle content-subtitle_search">Введите в поиске любую тему и узнайте, насколько популярной
+          она была в новостях за
+          прошедшую неделю.</p>
+        <form class="search__form" name="" novalidate>
+          <input type="text" class="search__input" placeholder="Введите тему новости">
+          <button type="submit" class="button button_search">Искать</button>
+        </form>
       </div>
-      <div class="results__list">
-        <div class="header">
+    </section>
+    <section class="results root__section">
+      <div class="section-content">
+        <div class="results__load">
+          <div class="loader"></div>
+          <p class="content-subtitle content-subtitle_results">Идёт поиск новостей...</p>
+        </div>
+        <div class="section-header">
           <h2 class="content-title content-title_results">Результаты поиска</h2>
-          <a href="./paper.html" class="header__link">Посмотреть аналитику &gt;</a>
+          <a href="./paper.html" class="section-header__link">Посмотреть аналитику &gt;</a>
         </div>
         <div class="results__news-cards">
           <div class="card">
@@ -46,7 +49,8 @@
             <div class="card__description">
               <p class="card__date">2 августа, 2019</p>
               <h3 class="card__news-title">Национальное достояние - парки</h3>
-              <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться
+              <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                складываться
                 система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
               </p>
               <p class="card__source">ЛЕНТА.РУ</p>
@@ -57,7 +61,8 @@
             <div class="card__description">
               <p class="card__date">2 августа, 2019</p>
               <h3 class="card__news-title">Лесные огоньки: история одной фотографии</h3>
-              <p class="card__news-text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы
+              <p class="card__news-text">Фотограф отвлеклась от освещения суровой политической реальности Мексики,
+                чтобы
                 запечатлеть ускользающую красоту одного из местных чудес природы.</p>
               <p class="card__source">МЕДУЗА</p>
             </div>
@@ -74,18 +79,20 @@
           </div>
         </div>
         <button type="submit" class="button button_more">Показать ещё</button>
-      </div>
-      <div class="results__empty">
-        <img src="./images/not-found.svg" alt="Sad smile" class="results__not-found-image">
-        <h2 class="content-title content-title_empty">Ничего не найдено</h2>
-        <p class="content-subtitle content-subtitle_results">К сожалению по вашему запросу ничего не найдено</p>
+        <div class="results__empty">
+          <img src="./images/not-found.svg" alt="Sad smile" class="results__not-found-image">
+          <h2 class="content-title content-title_empty">Ничего не найдено</h2>
+          <p class="content-subtitle content-subtitle_results">К сожалению по вашему запросу ничего не найдено</p>
+        </div>
       </div>
     </section>
-    <section class="author">
-      <img src="" alt="Author photo" class="author__photo">
-      <div class="author__about">
-        <h2 class="content-title content-title_author">Об авторе</h2>
-        <p class="author__about-text">Это блок с описаением автора проекта.</p>
+    <section class="author root__section">
+      <div class="section-content">
+        <img src="" alt="Author photo" class="author__photo">
+        <div class="author__about">
+          <h2 class="content-title content-title_author">Об авторе</h2>
+          <p class="author__about-text">Это блок с описаением автора проекта.</p>
+        </div>
       </div>
     </section>
     <footer class="footer">
