--- a/src/main.html
+++ b/src/main.html
@@ -38,9 +38,12 @@
         <div class="results__load">
           <div class="loader"></div>
           <p class="content-subtitle content-subtitle_results">Идёт поиск новостей...</p>
+          <!--<img src="./images/not-found.svg" alt="Sad smile" class="results__not-found-image">
+          <h2 class="content-title content-title_load">Ничего не найдено</h2>
+          <p class="content-subtitle content-subtitle_results">К сожалению по вашему запросу ничего не найдено</p>-->
         </div>
         <div class="section-header">
-          <h2 class="content-title content-title_results">Результаты поиска</h2>
+          <h2 class="content-title content-title_section-header">Результаты поиска</h2>
           <a href="./paper.html" class="section-header__link">Посмотреть аналитику &gt;</a>
         </div>
         <div class="results__news-cards">
@@ -79,15 +82,10 @@
           </div>
         </div>
         <button type="submit" class="button button_more">Показать ещё</button>
-        <div class="results__empty">
-          <img src="./images/not-found.svg" alt="Sad smile" class="results__not-found-image">
-          <h2 class="content-title content-title_empty">Ничего не найдено</h2>
-          <p class="content-subtitle content-subtitle_results">К сожалению по вашему запросу ничего не найдено</p>
-        </div>
       </div>
     </section>
     <section class="author root__section">
-      <div class="section-content">
+      <div class="section-content section-content_author">
         <img src="" alt="Author photo" class="author__photo">
         <div class="author__about">
           <h2 class="content-title content-title_author">Об авторе</h2>
